Fixed h3 alignment css
git-svn-id: https://fourtwosix.jira.com/svn/TXPETE/trunk@13073 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/reports/css/reports.css
+++ b/reports/css/reports.css
@@ -84,6 +84,8 @@ td {
 
 h3 { margin: 5px 0px; }
 
+.align-center { text-align: center; }
+
 .e-resize {
 	cursor: e-resize;
 }
